Uploading files for revised website

--- a/aboutme.html
+++ b/aboutme.html
@@ -22,7 +22,7 @@
 	<div class="w3-container">
 		<h1 class="w3-xxxlarge aggie-text">ABOUT ME</h1>
 		<div class= "w3-half w3-container">
-		<p class="w3-xlarge aggie-text aggie-justify">
+		<p class="w3-xlarge aggie-text ">
 		I'm from Laredo, Texas but I'm currently studying 
 		Computer Science at Texas A&M University in College Station. On campus 
 		I work in <a href="https://www.instagram.com/tamuwaltonhall/" target="_blank"> Walton Hall</a> 
@@ -40,8 +40,8 @@
 	</div>
 	
 </header>
-<div class ="w3-container w3-padding-32 aggie-green"></div>
-<p class="w3-xxlarge w3-center w3-padding-32 aggie-yellow aggie-nospace"> CONTACT ME </p>
+<div class ="w3-container w3-padding-32 aggie-maroon"></div>
+<p class="w3-xxlarge w3-center w3-padding-32 aggie-blue aggie-nospace"> CONTACT ME </p>
 <div class="w3-container">
 <div class="w3-container w3-half"><p class="w3-xlarge w3-center" style="font-weight:bolder">Email</p>
 <p class="w3-large w3-center"> bmora00@hotmail.com</p></div>
