--- a/experience.html
+++ b/experience.html
@@ -21,15 +21,13 @@
 <header class="w3-container w3-padding aggie-white">
 	<div>
 		<h1 class="w3-xxxlarge aggie-text">PROFESSIONAL EXPERIENCE</h1>
-		<h2 class="w3-xxlarge aggie-text">Resume</h2>
-		<p class="w3-large aggie-text">Click <a href="Resume_PDF.pdf" target="_blank">here</a> to see my resume!</p>
 		<h2 class="w3-xxlarge aggie-text">Contribution to Computer Science</h2>
 		<div class ="w3-container w3-large w3-center aggie-text">
 			<div class ="w3-container aggie-justify">
 			<p>
-			I’ve been coding for over 2 years now and have learned some about 
+			I’ve been coding for over 2 years now and have learned so much about 
 			modern technologies and practices. Between my schoolwork and professional responsibilities, 
-			writing code is a daily encounter.
+			writing code has become a daily encounter.
 			</p>
 			<p>
 			In school I’ve learned the basics of computer architecture, operating systems, and algorithmic 
@@ -44,9 +42,9 @@
 			data into our software solutions for onboarding clients. From time to time I also develop tools 
 			to retrieve regulatory information from different websites. To accomplish this, I use node.js 
 			and a headless browser to create web scrappers that gather the information and store it in a 
-			csv format or a <a href="https://www.mongodb.com/" target="_blank">Mongo<a> database. These tools drastically simplify tasks that would take multiple 
-			people working weeks to accomplish. Each tool comes with its own set of challenges, but I am 
-			always happy with what I produce and how much I learn.
+			csv format or a <a href="https://www.mongodb.com/" target="_blank">Mongo<a> database. These tools drastically simplify tasks that would normally 
+			take weeks to accomplish. Each tool comes with its own set of challenges, but I am 
+			always happy with what I produce and how much I learn!
 			</p>
 			<p>
 			I am also passionate about teaching others what I know and inspiring them to pursue computer 
@@ -61,6 +59,9 @@
 			</p>
 			</div>
 		</div>
+		<h2 class="w3-xxlarge aggie-text">Resume</h2>
+		<iframe src="Resume_PDF.pdf" height="800" width="1200" class="aggie-text"></iframe>
+		<p class="w3-large aggie-text">Click <a href="Resume_PDF.pdf" target="_blank">here</a> to download my resume!</p>
 	</div>
 
 </header>
