--- a/service.html
+++ b/service.html
@@ -23,18 +23,16 @@
 		<h1 class="w3-xxxlarge aggie-text">SERVICE</h1>
 		<h2 class="w3-xxlarge aggie-text">National Residence Hall Honorary</h2>
 		<p class="w3-xlarge aggie-text aggie-justify">
-		National Residence Hall Honorary(NRHH) is a group for on-campus residents
+		<a href="https://nrhh.tamu.edu/" target="_blank">National Residence Hall Honorary(NRHH)</a> is a group for on-campus residents
 		at A&M. One of the goals of NRHH is to provide service. In the past we've done
 		projects to help the local animal center and veterans. We also work to recognize
-		exceptional students and programs on campus. Check out our website
-		to learn more: <a href="https://nrhh.tamu.edu/">https://nrhh.tamu.edu/</a></p> 
+		exceptional students and programs on campus.
 		<h2 class="w3-xxlarge aggie-text">Big Event</h2>
 		<p class="w3-xlarge aggie-text aggie-justify">
-		Big Event is a huge service event that happens every year. Groups of Aggies are sent to 
+		<a href="https://bigevent.tamu.edu/" target="_blank">Big Event</a> is a huge service event that happens every year. Groups of Aggies are sent to 
 		residents in Bryan/College Station area to do various service projects. I’ve done Big 
 		Event every year I’ve been at A&M and usually get a group together when the time comes. In the past, projects 
-		usually include activities like landscaping, picking up trash, and painting. Some more
-		information can be found here: <a href="https://bigevent.tamu.edu/">https://bigevent.tamu.edu/<a> </p>
+		usually include activities like landscaping, picking up trash, and painting.
 	</div>
 </header>
 </body>
